@@ -4,6 +4,7 @@
 
 	* Fixed issue #27578: Remove references to Solr from editor facing UI
 
+	* Added an own implementation for making HTTP requests in tx_solr_indexqueue_PageIndexerRequest to provide better error handling/detection
 	* Added tx_solr_Query::setOperator()
 	* Fixed issue #30922: PHP Error in Used Facet Renderer
 	* Added a check in the install script whether the download mirror can be contacted
